force-app/main/default/objects/NC_Revenue__c/NC_Revenue__c.object-meta.xml
<CustomObject>
    <label>Revenue</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>