force-app/main/default/objects/NC_Revenue__c/fields/R_Earned__c.field-meta.xml
<CustomField>
    <fullName>R_Earned__c</fullName>
    <label>Earned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>