force-app/main/default/objects/NC_Revenue__c/fields/R_End_Date__c.field-meta.xml
<CustomField>
    <fullName>R_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>