force-app/main/default/objects/NC_Revenue__c/fields/R_Goal_Amount__c.field-meta.xml
<CustomField>
    <fullName>R_Goal_Amount__c</fullName>
    <description>The goal amount is derived by aggregating all the goal revenue amounts.</description>
    <label>Goal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>