force-app/main/default/objects/NC_Revenue__c/fields/R_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>R_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>